--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "watch": "npx tsc-watch --onSuccess \"npm run start\""
+    "watch": "npx tsc-watch --onSuccess \"npm run start\"",
+    "mongo-gui": "npx mongo-gui -u mongodb://mongo-user:mongo-password@localhost:27017"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
+    "mongo-gui": "^0.0.18",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   },
@@ -25,6 +27,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "mongodb": "^6.2.0"
   }
 }
