--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,8 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: ${password}
         ports:
             - 27017:27017
+    redis:
+        image: redis:latest
+        restart: always
+        ports:
+            - 6379:6379
