--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "mongo-gui": "^0.0.18",
+    "redis-commander": "^0.8.0",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-redis": "^7.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "redis": "^4.6.11"
   }
 }
