--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongodb": "^6.2.0",
-    "redis": "^4.6.11"
+    "redis": "^4.6.11",
+    "socket.io": "^4.7.2"
   }
 }
