--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/escape-html": "^1.0.4",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/node": "^20.9.0",
@@ -29,6 +30,7 @@
     "connect-redis": "^7.1.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
+    "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
