--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/escape-html": "^1.0.4",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.4.4",
     "@types/express-session": "^1.17.10",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -33,6 +34,7 @@
     "escape-html": "^1.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongodb": "^6.2.0",
